# xiaobiu-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/suning_biu_ha/: __init__.py  captcha_bridge.py  client.py  crypto.py  models.py
src/xiaobiu/: captcha_bridge.py  client.py  crypto.py  models.py
tests/: test_captcha_bridge.py  test_client.py  test_crypto.py  test_turn_on_ac.py
