[project]
name = "suning-biu-ha"
version = "0.1.0"
description = "Suning biu smart home SMS login and session client"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "FaintGhost", email = "zhang.yaowei@live.com" }
]
keywords = ["suning", "smart-home", "home-assistant", "climate"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
requires-python = ">=3.12"
dependencies = [
  "cryptography>=44.0.0",
  "pydantic>=2.0.0",
  "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/FaintGhost/suning-biu-ha"
"Bug Tracker" = "https://github.com/FaintGhost/suning-biu-ha/issues"

[project.scripts]
suning-biu-ha = "suning_biu_ha:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suning_biu_ha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
