[project]
name = "python-xiaobiu"
version = "0.0.1"
description = "Suning biu smart home SMS login and session client"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "FaintGhost", email = "zhang.yaowei@live.com" },
  { name = "zhiyuHD", email = "zhiyuxl@outlook.com"}
]
keywords = ["suning", "smart-home", "home-assistant", "climate"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
requires-python = ">=3.14"
dependencies = [
  "cryptography>=44.0.0",
  "pydantic>=2.0.0",
  "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/FaintGhost/python-xiaobiu"
"Bug Tracker" = "https://github.com/FaintGhost/python-xiaobiu/issues"

[project.scripts]
xiaobiucli = "xiaobiu:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaobiu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
